# orivia

./: README.md
backend/: .env.example  .gitignore  pyproject.toml  pytest.ini  redis-docker-compose.yml
backend/config/: settings.py  urls.py
backend/gateway/: admin.py  models.py  urls.py  views.py
backend/gateway/migrations/: 0001_initial.py
backend/gateway/tests/: test_gateway.py  test_proxy_opentrip.py  test_proxy_planner.py  test_urls.py
backend/users/: admin.py  models.py  serializers.py  signals.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: conftest.py  test_admin.py  test_fixtures.py  test_models.py  test_profile_api.py  test_serializers.py  test_signals.py  test_urls.py  test_views.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  Modal.jsx  Navbar.jsx
frontend/src/mocks/: mockData.js
frontend/src/pages/auth/: LoginPage.jsx  RegisterPage.jsx  RoleSelectionPage.jsx
frontend/src/pages/explore/: BookingPage.jsx  CheckoutPage.jsx  CustomerPage.jsx
frontend/src/pages/home/: HomePage.jsx  LandingPage.jsx
frontend/src/pages/profile/: AgentProfilePage.jsx  CustomerProfilePage.jsx
frontend/src/pages/trip/: AgentPage.jsx  NewTripPage.jsx  ParticipantPage.jsx  TripEditPage.jsx
frontend/src/services/: api.js  bookingService.js  profileService.js  tripService.js
frontend/src/styles/: global.jsx  variables.jsx
